full support 2 languages (en & nl)

--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -1,4 +1,38 @@
 {
     "greeting": ["Greetings traveler!", "Hello there!", "Howdy cowboy!"],
-    "sample": "Hi, I'm the notes contacts shirts bot. I can create delete and read notes and contacts and I can show you t-shirts!"
+    "sample": "Hi, I'm the notes contacts shirts bot. I can create delete and read notes and contacts and I can show you t-shirts!",
+    "help": "you asked for help, I'm sorry but I can't help you",
+    "cancel": "you cancelled, don't you like me?",
+    "create_cancel_contact": "This will cancel the creation of the contact you started. Are you sure?",
+    "confirm_prompt": "Are you sure?",
+    "contact_canceled": "Contact canceled",
+    "read_contact_canceled": "Reading contact canceled",
+    "delete_contact_canceled": "Deleting contact canceled.",
+    "name_new_contact": "What would you like to call your new contact?",
+    "phone_new_contact": "What phone number would you like to give to this contact?",
+    "contact_created": "Creating contact named '%s' with number '%s'",
+    "delete_contact": "Which contact would you like to delete?",
+    "no_delete_contact": "No contacts to delete.",
+    "contact_deleted": "Deleted the '%s' contact.",
+    "read_contact": "Which contact would you like to read?",
+    "no_read_contact": "No contacts to read.",
+    "contact_read": "Here's your contact named '%s': '%s'.",
+    "create_note": "What would you like to call your note?",
+    "text_note": "What would you like to say in your note?",
+    "note_created": "Creating note named '%s' with text '%s'",
+    "delete_note": "Which note would you like to delete?",
+    "no_delete_note": "No notes to delete.",
+    "note_deleted": "Deleted the '%s' note.",
+    "create_cancel_note": "This will cancel the creation of the note you started. Are you sure?",
+    "note_canceled": "Note canceled.",
+    "note_delete_canceled": "Ok - canceled note deletion.",
+    "note_read_canceled": "Ok.",
+    "read_note": "Which note would you like to read?",
+    "no_read_note": "No notes to read.",
+    "note_read": "Here's the '%s' note: '%s'.",
+    "size_shirt": "What size would you like?",
+    "shirt_not_found": "I'm sorry... That product wasn't found.",
+    "shirt_added": "A '%(size)s %(product)s' has been added to your cart.",
+    "buy_shirt_white": "buy classic white t-shirt",
+    "buy_shirt_gray": "buy classic gray t-shirt"
 }
