--- a/locale/nl/index.json
+++ b/locale/nl/index.json
@@ -1,4 +1,38 @@
 {
     "greeting": ["Hallo daar!", "Hallo", "Dag ploppertje"],
-    "sample": "Hallo, ik ben de bot die je kan helpen met het beheren van je contacten, notities. Ik kan je ook T-shirts tonen."
+    "sample": "Hallo, ik ben de bot die je kan helpen met het beheren van je contacten, notities. Ik kan je ook T-shirts tonen.",
+    "help": "Je vroeg voor hulp, sorry maar ik kan jou niet helpen.",
+    "cancel": "Je hebt gecanceld. Waarom? Ben ik niet leuk genoeg?",
+    "create_cancel_contact": "Het creëren van het contact wordt stopgezet. Ben je zeker?",
+    "confirm_prompt": "Ben je zeker?",
+    "contact_canceled": "Contact gecandeld.",
+    "read_contact_canceled": "Lezen van het contact is gecanceld.",
+    "delete_contact_canceled": "Verwijderen van het contact is gecanceld.",
+    "name_new_contact": "Hoe wil je je contact noemen?",
+    "phone_new_contact": "Welk nummer wil je dit contact geven?",
+    "contact_created": "Contact '%s' met nummer '%s' is aangemaakt.",
+    "delete_contact": "Welk contact wil je verwijderen?",
+    "no_delete_contact": "Er zijn geen contacten om te verwijderen",
+    "contact_deleted": "Contact '%s' is verwijderd",
+    "read_contact": "Welk contact wil je weergeven?",
+    "no_read_contact": "Er zijn geen contacten om weer te geven",
+    "contact_read": "Zie hier contact '%s': '%s'.",
+    "create_note": "Hoe wil je je notitie noemen?",
+    "text_note": "Wat moet er in je notitie staan?",
+    "note_created": "Notitie '%s' met tekst '%s' is opgeslagen",
+    "delete_note": "Welke notitie wil je verwijderen?",
+    "no_delete_note": "Er zijn geen notities om te verwijderen.",
+    "note_deleted": "Notitie '%s' is verwijderd.",
+    "create_cancel_note": "Dit zal het aanmaken van de notitie cancellen. Ben je zeker?",
+    "note_canceled": "Notitie gecanceld",
+    "note_delete_canceled": "Ok, verwijderen van notitie is gecanceld.",
+    "note_read_canceled": "Ok.",
+    "read_note": "Welke notitie wil je lezen?",
+    "no_read_note": "Er zijn geen notities om te lezen.",
+    "note_read": "Is is notitie '%s' met tekst: '%s'.",
+    "size_shirt": "Welke maat zou je willen?",
+    "shirt_not_found": "Sorry, we hebben dat product niet terug gevonden.",
+    "shirt_added": "Een '%(size)s %(product)s' is toegevoegd aan je winkelwagen.",
+    "buy_shirt_white": "Koop klassiek wit t-shirt",
+    "buy_shirt_gray": "Koop klassiek grijs t-shirt"
 }
